apps/flame/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flame
  namespace: sambda
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`flame.elposhox.dev`)
    services:
    - kind: Service
      name: flame
      port: 5005
